crates/pwsh-ffi/include/devolutions_pwsh_ffi.h

struct dps_pwsh_utf8_span {
    const uint8_t* data;
    size_t len;
};
/*
 * A data value is a tag plus bounded caller-owned payload bytes. `size` must
 * be sizeof(struct dps_pwsh_data_value), `flags` and `reserved` must be zero,
 * and the library never retains `data`. Scalar payloads use the documented
 * fixed encodings. Arrays and property bags use the nested binary envelope
 * documented in docs/in-process-ffi.md; they are not JSON or object handles.
 */
struct dps_pwsh_data_value {
    uint32_t size;
    uint32_t kind;
    uint32_t flags;
    uint32_t reserved;
    const uint8_t* data;
    size_t data_len;
};
struct dps_pwsh_call_result {
    uint32_t size;
    int32_t status;
    uint32_t flags;
    uint32_t reserved;
    uint8_t* diagnostic;
    size_t diagnostic_capacity;
    size_t diagnostic_required;
    size_t diagnostic_written;
};
struct dps_pwsh_capability_registration {
    uint32_t size;
    uint32_t flags;
    const struct dps_pwsh_data_value* definitions;
    dps_pwsh_capability_dispatch_callback dispatch;
    dps_pwsh_capability_cancel_callback cancel;
};
/*
 * All fields are declarative copies. allowed_module_path is retained for
 * source compatibility and must be empty for new consumers; use
 * allowed_module_paths instead. Initial variables are a PropertyBag data
 * value, module imports and paths are Array-of-String data values, and
 * environment is a PropertyBag whose values are String data values. Every
 * collection is capped at 32 entries. Module paths/imports, working directory,
 * and environment keys must be approved by the activated payload manifest's
 * sessionPolicy; rejected policy diagnostics never echo supplied values.
 *
 * The appended fields preserve the v2 prefix: a caller compiled against the
 * 64-byte prefix may set size to 64 and receives empty/default appended
 * configuration. New callers set size to sizeof(struct dps_pwsh_session_options).
 * flags, reserved, and configuration_flags must be zero. CurrentRunspace requires every setting
 * except runspace_mode to be its zero/default value, avoiding mutation of an
 * application's ambient runspace.
 */
struct dps_pwsh_session_options {
    uint32_t size;
    uint32_t runspace_mode;
    uint32_t initial_configuration;
    uint32_t history_mode;
    uint32_t error_preference;
    uint32_t warning_preference;
    uint32_t verbose_preference;
    uint32_t debug_preference;
    uint32_t information_preference;
    uint32_t flags;
    uint32_t reserved;
    struct dps_pwsh_utf8_span allowed_module_path;
    uint32_t execution_policy;
    uint32_t configuration_flags;
    struct dps_pwsh_data_value initial_variables;
    struct dps_pwsh_data_value module_imports;
    struct dps_pwsh_data_value allowed_module_paths;
    struct dps_pwsh_utf8_span working_directory;
    struct dps_pwsh_data_value environment;
};
/*
 * This is a copied, point-in-time record. event_count is capped at 32 and
 * flags reports event-ring overflow. Session activity is serialized per
 * process/runspace; it is not a signal that callers may run pipelines
 * concurrently on a runspace.
 */
struct dps_pwsh_session_snapshot {
    uint32_t size;
    uint32_t state;
    uint32_t runspace_state;
    uint32_t flags;
    uint32_t active_pipeline_count;
    uint32_t event_count;
    uint64_t invocation_count;
    uint64_t history_count;
};
/*
 * A pool boundary is present so consumers receive a deterministic answer rather
 * than a deceptive pool. No pool handle is returned in this ABI version:
 * dps_pwsh_v2_session_pool_create always returns UNSUPPORTED_CAPABILITY after
 * validating this bounded configuration.
 */
struct dps_pwsh_session_pool_options {
    uint32_t size;
    uint32_t minimum_sessions;
    uint32_t maximum_sessions;
    uint32_t flags;
    uint32_t reserved;
};
int32_t dps_pwsh_v2_get_invocation_error_count(
    uint64_t handle,
    uint32_t* error_count,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_copy_invocation_error_field_utf8(
    uint64_t handle,
    uint32_t error_index,
    uint32_t field,
    uint8_t* buffer,
    size_t buffer_len,
    size_t* required_len,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_stop(
    uint64_t handle,
    struct dps_pwsh_call_result* result);
/*
 * Capability registrations are opt-in and runtime scoped. `definitions` is a
 * bounded tagged PropertyBag containing only schema metadata, never handlers
 * or CLR object identity. Attach a registration to a builder with
 * dps_pwsh_v2_set_capabilities; the attachment is consumed by its next
 * invocation. Releasing cancels active callbacks and revokes future calls.
 */
int32_t dps_pwsh_v2_capability_register(
    const struct dps_pwsh_capability_registration* registration,
    uint64_t* capability_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_capability_release(
    uint64_t capability_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_set_capabilities(
    uint64_t handle,
    uint64_t capability_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_result_copy_stream_record_value(
    uint64_t result_handle,
    uint32_t stream,
    uint32_t record_index,
    uint32_t value_slot,
    uint32_t* kind,
    uint8_t* buffer,
    size_t buffer_len,
    size_t* required_len,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_result_get_sequence_record(
    uint64_t result_handle,
    uint32_t sequence_index,
    uint32_t* stream,
    uint32_t* record_index,
    uint64_t* sequence,
    struct dps_pwsh_call_result* result);
/*
 * Async invocation consumes the builder for mutation while the operation is
 * active. Its bounded input collection must therefore be completed before
 * start; producers cannot feed input after this call returns. The operation
 * retains the builder until terminal completion, so builder/operation release
 * races cannot free a managed pipeline used by a native call.
 *
 * Stop is idempotent. Release also requests cancellation for a non-terminal
 * operation then detaches the caller's handle; a released native handle is no
 * longer valid. Poll and wait return an operation state and terminal
 * status. While pending/running their return status is SUCCESS. Terminal
 * cancellation/failure is returned both as the function status and in
 * terminal_status, with the bounded terminal diagnostic in call_result.
 * timeout_milliseconds == UINT32_MAX waits indefinitely.
 */
int32_t dps_pwsh_v2_invoke_async(
    uint64_t handle,
    uint64_t* operation_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_operation_release(
    uint64_t operation_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_operation_stop(
    uint64_t operation_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_operation_poll(
    uint64_t operation_handle,
    uint32_t* state,
    int32_t* terminal_status,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_operation_wait(
    uint64_t operation_handle,
    uint32_t timeout_milliseconds,
    uint32_t* state,
    int32_t* terminal_status,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_operation_get_result(
    uint64_t operation_handle,
    uint64_t* result_handle,
    struct dps_pwsh_call_result* result);
/*
 * Session ownership is independent from builder, result, and operation handles.
 * Releasing a session detaches its public handle immediately; managed builders
 * already created from it retain an internal lease until they are released.
 */
int32_t dps_pwsh_v2_session_create(
    const struct dps_pwsh_session_options* options,
    uint64_t* session_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_session_release(
    uint64_t session_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_session_create_builder(
    uint64_t session_handle,
    uint64_t* builder_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_session_get_snapshot(
    uint64_t session_handle,
    struct dps_pwsh_session_snapshot* snapshot,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_session_get_event_info(
    uint64_t session_handle,
    uint32_t event_index,
    uint64_t* sequence,
    uint32_t* state,
    uint32_t* flags,
    struct dps_pwsh_call_result* result);
/*
 * Session variables are copied tagged values only. Names are bounded ASCII
 * identifiers. Mutation and reads reject a session with a pending or running
 * invocation; Get returns found == 0 for an absent variable and never exposes
 * a PSVariable, PSObject, or any live CLR object.
 */
int32_t dps_pwsh_v2_session_set_variable(
    uint64_t session_handle,
    struct dps_pwsh_utf8_span name,
    const struct dps_pwsh_data_value* value,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_session_remove_variable(
    uint64_t session_handle,
    struct dps_pwsh_utf8_span name,
    uint32_t* removed,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_session_get_variable_snapshot(
    uint64_t session_handle,
    struct dps_pwsh_utf8_span name,
    uint32_t* found,
    uint32_t* kind,
    uint8_t* buffer,
    size_t buffer_len,
    size_t* required_len,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_session_pool_create(
    const struct dps_pwsh_session_pool_options* options,
    uint64_t* pool_handle,
    struct dps_pwsh_call_result* result);