dotnet/ffi/NativeMethods.cs


    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_result_copy_stream_record_value")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CopyInvocationResultStreamRecordValue(
        ulong resultHandle,
        uint stream,
        uint recordIndex,
        uint valueSlot,
        uint* kind,
        byte* buffer,
        nuint bufferLength,
        nuint* requiredLength,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_result_get_sequence_record")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int GetInvocationResultSequenceRecord(
        ulong resultHandle,
        uint sequenceIndex,
        uint* stream,
        uint* recordIndex,
        ulong* sequence,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_get_invocation_error_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int GetInvocationErrorCount(
        ulong handle,
        uint* errorCount,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_copy_invocation_error_field_utf8")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CopyInvocationErrorField(
        ulong handle,
        uint errorIndex,
        uint field,
        byte* buffer,
        nuint bufferLength,
        nuint* requiredLength,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_stop")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int Stop(ulong handle, NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_invoke_async")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int InvokeAsync(
        ulong handle,
        ulong* operationHandle,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_operation_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int ReleaseOperation(ulong operationHandle, NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_operation_stop")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int StopOperation(ulong operationHandle, NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_operation_poll")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int PollOperation(
        ulong operationHandle,
        uint* operationState,
        int* terminalStatus,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_operation_wait")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int WaitOperation(
        ulong operationHandle,
        uint timeoutMilliseconds,
        uint* operationState,
        int* terminalStatus,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_operation_get_result")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int GetOperationResult(
        ulong operationHandle,
        ulong* resultHandle,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_session_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CreateSession(
        NativeSessionOptions* options,
        ulong* sessionHandle,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_session_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int ReleaseSession(ulong sessionHandle, NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_session_create_builder")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CreateSessionBuilder(
        ulong sessionHandle,
        ulong* builderHandle,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_session_get_snapshot")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int GetSessionSnapshot(
        ulong sessionHandle,
        NativeSessionSnapshot* snapshot,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_session_get_event_info")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int GetSessionEventInfo(
        ulong sessionHandle,
        uint eventIndex,
        ulong* sequence,
        uint* state,
        uint* flags,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_session_set_variable")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SetSessionVariable(
        ulong sessionHandle,
        NativeUtf8Span name,
        NativeDataValue* value,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_session_remove_variable")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int RemoveSessionVariable(
        ulong sessionHandle,
        NativeUtf8Span name,
        uint* removed,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_session_get_variable_snapshot")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int GetSessionVariableSnapshot(
        ulong sessionHandle,
        NativeUtf8Span name,
        uint* found,
        uint* kind,
        byte* buffer,
        nuint bufferLength,
        nuint* requiredLength,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_capability_register")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int RegisterCapabilities(
        NativeCapabilityRegistration* registration,
        ulong* capabilityHandle,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_capability_release")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int ReleaseCapabilities(ulong capabilityHandle, NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_set_capabilities")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int SetCapabilities(
        ulong builderHandle,
        ulong capabilityHandle,
        NativeCallResult* result);

    [LibraryImport(LibraryName, EntryPoint = "dps_pwsh_v2_session_pool_create")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial int CreateSessionPool(
        NativeSessionPoolOptions* options,
        ulong* poolHandle,
        NativeCallResult* result);
}
